immich/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: immich-library
              mountPath: /mnt/data/immich
      volumes:
        - name: immich-library
          persistentVolumeClaim:
            claimName: immich-library-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: model-cache
              mountPath: /cache
      volumes:
        - name: model-cache
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: immich-postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:32324a2f41df5de9efe1af166b7008c3f55646f8d0e00d9550c16c9822366b4a
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: immich-db-pvc
              mountPath: /var/lib/immich-postgres/data
      volumes:
        - name: immich-db-pvc
          persistentVolumeClaim:
            claimName: immich-db-pvc
---
