immich/service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-service
spec:
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres-service
spec:
  selector:
    app: immich-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
