immich/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: photo.limtaehyun.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server-service
                port:
                  number: 2283
